--- a/package.json
+++ b/package.json
@@ -7,10 +7,25 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon -r dotenv/config --exec node   src/server.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.2",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
+    "morgan": "^1.10.1",
+    "npm": "^11.5.2"
   }
 }
